--- a/app/src/main/res/layout/schoolcard.xml
+++ b/app/src/main/res/layout/schoolcard.xml
@@ -1,6 +1,4 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,49 +10,62 @@
     android:focusable="true"
     android:foreground="?selectableItemBackground">
 
-    <android.support.v7.widget.GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
-        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
-        app:columnCount="2">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/schoolname"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="Plano Highschool" />
+            android:layout_weight="9"
+            android:orientation="vertical"
+            android:paddingBottom="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:paddingTop="4dp">
 
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/schoolname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Plano Highschool"
+                android:textColor="@color/primary_text"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="123 abc street"
+                android:textColor="@color/secondary_text"/>
+
+            <TextView
+                android:id="@+id/language"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="java"
+                android:textColor="@color/secondary_text"/>
+
+            <TextView
+                android:id="@+id/type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="public"
+                android:textColor="@color/secondary_text" />
+
+
+        </LinearLayout>
+
+
+        <ImageView
+            android:id="@+id/addtofav"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:text="Plano Highschool" />
-
-        <TextView
-            android:id="@+id/level"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Plano Highschool" />
-
-        <TextView
-            android:id="@+id/type"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Plano Highschool" />
-
-        <TextView
-            android:id="@+id/language"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Plano Highschool" />
-
-        <TextView
-            android:id="@+id/gender"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Plano Highschool" />
-
-    </android.support.v7.widget.GridLayout>
+            android:src="@drawable/bookmark"
+            android:visibility="visible"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
